# wise_alps_dreambooth

./: .copier-answers.yml  .gitignore  README.md  alps.sh  pyproject.toml
.github/workflows/: build.yml  get-all-containerized-python-components.yml  get-changed-containerized-python-components.yml  trigger.on-push-develop.yml  trigger.on-release.yml
components/sample/: containerized_python_component.py  lightweight_python_component.py  structured_logging.py  train_model_by_pytorch.py  train_model_by_train_upload.py  train_model_for_evaluate.py  user_base_image_containerized_python_component.py  user_base_image_lightweight_python_component.py  user_base_image_train_model.py
components/sample/helpers/: hello.py  say.py
components/support/: upload_model.py
containers/sample/_deep-learning-base/: Dockerfile  README.md  build-push.sh  pyproject.toml
containers/sample/containerized-python-component-base/: Dockerfile  README.md  build-push.sh  pyproject.toml
containers/sample/lightweight-python-component-base/: Dockerfile  README.md  build-push.sh  pyproject.toml
containers/wise-alps-diffusion/: Dockerfile  build-push.sh
containers/wise-diffusion-containerized-python-component-base/: build-push.sh
docs/: PREREQUISITES.md  SETUP.md
pipelines/sample/: evaluate.py  simple.py  train_upload.py
pipelines/support/: pipeline_enum.py  pipelines.py
scripts/sample/: custom_job_script.py  submit.py  submit.sh  submit_for_evaluate.py  train.py  train.sh
scripts/support/: build.sh  commands.py  compile.py  compile.sh  create.py  find_containerized_python_components.py  test.sh  upload-components.sh  upload-pipelines.sh  upload_pipelines.py  workload-identity-pool-resource.sh
settings/: .env  .env.dev  .env.prod  settings.py
(+6 files in other folders)
