[tool.poetry]
name = "lightweight-python-component-base-project"
version = "0.1.0"
description = ""
authors = ["umid.podo <umid.podo@kakaoent.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
kfp = "^2.7.0"
cowsay = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
